--- a/src/main/webapp/css/miestilo.css
+++ b/src/main/webapp/css/miestilo.css
@@ -440,3 +440,32 @@ a:hover{
   font: 400 18px/1 'Kaushan Script', cursive;
   color: #888;
 }
+
+#NuevoUser .form-control-feedback {
+ top: 27px;
+    right:15px;
+}
+#NuevoUser .form-control-feedback#captcha {
+ top: 76px;
+    right:15px;
+}
+.bg {
+  background: url('http://lorempixel.com/output/nightlife-q-c-1270-480-4.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 400px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+  margin-top: 64px;
+
+}
+
+.jumbotron {
+  height: 400px;
+  color: white;
+  text-shadow: #444 0 1px 1px;
+  background:transparent;
+  margin-top: -54px;
+  padding-top: 245px;
+}
