pagina atraccion implementada

--- a/src/main/webapp/css/miestilo.css
+++ b/src/main/webapp/css/miestilo.css
@@ -11,6 +11,10 @@ body{
 
 
 }
+ul {
+	font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+}
 p{
  font-family: 'Raleway', sans-serif;
   font-size: 18px;
