mejorar busqueda, implementar opciones de restaurante

--- a/src/main/webapp/css/miestilo.css
+++ b/src/main/webapp/css/miestilo.css
@@ -118,13 +118,13 @@ text-shadow:5px 5px 10px black;
 	word-spacing: -0.02em;
 	line-height: initial;
 	background: rgba(25,114,215,1);
-	background: -moz-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(25,114,215,1)), color-stop(77%, rgba(54,146,231,0.01)), color-stop(78%, rgba(54,146,231,0)));
-	background: -webkit-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: -o-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: -ms-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: linear-gradient(to right, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1972d7', endColorstr='#3692e7', GradientType=1 );
+	background: -moz-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(25,114,215,1)), color-stop(99%, rgba(54,146,231,0.1)), color-stop(100%, rgba(54,146,231,0.09)));
+	background: -webkit-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -o-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -ms-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: linear-gradient(to right, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1972d7', endColorstr='#3692e7', GradientType=1 );	
 }
 #titulozona  {
 	 font-family: 'Fjalla One', sans-serif;
@@ -138,14 +138,35 @@ text-shadow:5px 5px 10px black;
 	line-height: initial;
 	color: white;
 	background: rgba(25,114,215,1);
-	background: -moz-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(25,114,215,1)), color-stop(77%, rgba(54,146,231,0.01)), color-stop(78%, rgba(54,146,231,0)));
-	background: -webkit-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: -o-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: -ms-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	background: linear-gradient(to right, rgba(25,114,215,1) 0%, rgba(54,146,231,0.01) 77%, rgba(54,146,231,0) 78%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1972d7', endColorstr='#3692e7', GradientType=1 );
+	background: -moz-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(25,114,215,1)), color-stop(99%, rgba(54,146,231,0.1)), color-stop(100%, rgba(54,146,231,0.09)));
+	background: -webkit-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -o-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -ms-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: linear-gradient(to right, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1972d7', endColorstr='#3692e7', GradientType=1 );	
 }
+#tituloprin{
+	text-align: -webkit-center;
+	font-family: 'Fjalla One', sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 50px;
+	color: white;
+	text-transform: none;
+	text-decoration: none;
+	letter-spacing: -0.05em;
+	word-spacing: -0.02em;
+	line-height: initial;
+	background: rgba(25,114,215,1);
+	background: -moz-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(25,114,215,1)), color-stop(99%, rgba(54,146,231,0.1)), color-stop(100%, rgba(54,146,231,0.09)));
+	background: -webkit-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -o-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: -ms-linear-gradient(left, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	background: linear-gradient(to right, rgba(25,114,215,1) 0%, rgba(54,146,231,0.1) 99%, rgba(54,146,231,0.09) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1972d7', endColorstr='#3692e7', GradientType=1 );	
+	}
 @media (max-width: 767px) {
   body{
       background: url(../images/intro.png) 50% 0 fixed;
@@ -284,7 +305,8 @@ form#search-form ul{
 	  z-index: 1;	  
 	  border:1px solid #DDDDDD;
 	  border-radius: 6px;
-	  background:White;	  
+	  background:White;	
+	  font-size: medium;  
   }
  
 span.ui-helper-hidden-accessible{
@@ -526,5 +548,63 @@ a:hover{
   margin-top: -54px;
   padding-top: 245px;
 }
+.ui-autocomplete {
+    position: absolute;
+    z-index: 1000;
+    cursor: default;
+    padding: 0;
+    margin-top: 2px;
+    list-style: none;
+    background-color: #ffffff;
+    border: 1px solid #ccc
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+       -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.ui-autocomplete > li {
 
+ margin-top: 10px;
+ margin-bottom: 10px;
+ height: 60px;
+}
+.ui-autocomplete > li.ui-state-focus {
+  background-color: #DDD;
+  height:60px;
+}
+.ui-helper-hidden-accessible {
+  display: none;
+}
+.ui-menu-item a {
+text-decoration: none;
+display: block;
+padding: .2em .4em;
+line-height: 1.5;
+zoom: 1;
+font-size: small;
+ margin-top: 10px;
+ margin-bottom: 10px;
+
+}
+.ui-menu .ui-menu-item a.ui-corner-all:hover, .ui-menu .ui-menu-item a.ui-corner-all:focus, .ui-menu .ui-menu-item a.ui-corner-all:active {
+    background:#ff8a00!important;
+    color:#000;
+    border-radius:0;
+    height:60px;
+}
+
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+    background: #ff8a00;
+    border: none;
+    color:#000;
+    border-radius:0;
+    font-weight: normal;
+    height:60px;
+}
+.ui-menu-item .image{
+    float: left;
+    margin-right: 5px;
+}
 }
